# requestor

./: .gitignore  README.md  client.py  config.json  postTest.py  requestor-server.service  requestor.py  server-exec  server.py  server_client.py
DefaultCred/: check.py  defaultLinux.txt  defaultWindows.txt
ansible/: ansible.cfg  deploy.yml  deploy2.yml  inventory.ini  inventory.yaml  inventory.yml  teams.yaml
ansible/group_vars/: all.yml
ansible/requestor/files/: requestor.service.linux  requestor.service.pf
ansible/requestor/tasks/: main.yml
ansible/requestor/vars/: main.yml
ansible/roles/requestor/files/: requestor.service.linux  requestor.service.pf  requestor.sh
ansible/roles/requestor/tasks/: main.yml  restart.yml
ansible/roles/requestor/vars/: main.yml
cert/: cert.pem  key.pem
client/: Cargo.toml
client/src/: main.rs
docker-server/: docker-compose.yml  nginx.conf
docker-server/c2/: Dockerfile  Dockerfile.bak  config.json
docker-server/c2/rust_server/: Cargo.toml
docker-server/c2/rust_server/src/: main.rs
docker-server/cert/: c2.crt  c2.key
docker-server/db/: Dockerfile  init.sql
serverDependencies/: Command.py  Host.py  Hostname.py  Team.py
v1/: client_one_req.py
v1/serverDependencies/: Hostname.py  Team.py
