[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "4.0.0"
json = "0.12.4"
pnet = "0.31.0"
pnet_datalink = "0.31.0"
reqwest = { version = "0.11.13", features = ["json","blocking"] } # reqwest with JSON parsing support
wait-timeout = "0.2.0"
